--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,11 @@
 body {
   text-align: center;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  background-color: #99CCCC ;
+}
+
+canvas {
+  background-color: #9933CC;
 }
 
 canvas {
